Fixed header alignments

--- a/client/css/CreateTask.css
+++ b/client/css/CreateTask.css
@@ -49,7 +49,7 @@ body{
     display: flex;
     justify-content: space-between;
     text-align: left;
-    padding-left: 1%;
+    padding-left: 5%;
     margin-top: 20px;
     align-items: center;
 }
