--- a/client/css/EditTask.css
+++ b/client/css/EditTask.css
@@ -49,104 +49,12 @@ body{
     display: flex;
     justify-content: space-between;
     text-align: left;
-    padding-left: 2.5%;
+    padding-left: 5%;
     margin-top: 20px;
     align-items: center;
 }
 
-.contentBox{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    margin-top: 2%;
-}
-
-form {
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-top: 2%;
-}
-
-label {
-    margin-left: 5%;
-}
-
-input {
-    height: 30px;
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    border: 1px solid #d9d9d9;
-    border-radius: 5px;
-    padding-left: 2%;
-}
-
-input[type="datetime-local"] {
-    padding-right: 5px;
-}
-
-textarea{
-    min-height: 30px;
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    border: 1px solid #d9d9d9;
-    border-radius: 5px;
-    padding-left: 2%;
-    line-height: 30px;
-    resize: none;
-    overflow: hidden;
-}
-
-.detailsHalf{
-    width: 50%;
-}
-
-.fileHalf{
-    width: 50%;
-}
-
-.fileTitle{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#addFile{
-    height: 40px;
-    margin-right: 5%;
-    margin-left: auto;
-    font-size: 16px;
-    font-weight: bold;
-    background-color: #04aa6d;
-    color: white;
-    padding: 0px 15px 0px 15px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-}
-
-#addFile:hover{
-    background-color: #45a049;
-    transform:scale(1.1);
-}
-
-.fileList{
-    margin-top: 20px;
-}
-
-.fileItem{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 5px;
-}
-
-#removeFile{
+#deleteBtn{
     height: 40px;
     margin-right: 5%;
     margin-left: auto;
@@ -162,15 +70,80 @@ textarea{
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
 
-#removeFile:hover{
+#deleteBtn:hover{
     background-color:#cc0000;
     transform:scale(1.1);
+}
+
+.contentBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 2%;
+}
+
+form {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 2%;
+}
+
+label {
+    margin-left: 5%;
+    min-width: 100px;
+}
+
+input {
+    height: 30px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    border: 1px solid #d9d9d9;
+    border-radius: 5px;
+    padding-left: 1%;
+}
+
+input[type="datetime-local"] {
+    padding-right: 5px;
+}
+
+textarea{
+    min-height: 30px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    border: 1px solid #d9d9d9;
+    border-radius: 5px;
+    padding-left: 1%;
+    line-height: 30px;
+    resize: none;
+    overflow: hidden;
+}
+
+.contributorList{
+    display: flex;
+    flex-direction: column;
+}
+
+.contributorRow{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.spacer{
+    width: 50%;
 }
 
 .buttons{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 50px;
 }
 
 #cancel{
